--- a/example-app/build.gradle
+++ b/example-app/build.gradle
@@ -13,5 +13,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.swaarm:android-sdk:0.0.46'
+    //implementation 'com.github.swaarm:android-sdk:0.0.46'
+    implementation project(':sdk')
 }
