--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 32
     defaultConfig {
         targetSdkVersion 32
-        minSdkVersion 15
+        minSdkVersion 19
         versionCode 1
         versionName rootProject.ext.sdkVersion
     }
@@ -40,4 +40,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.gms:play-services-appset:16.0.2'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+
 }
