optional advertisement id

--- a/sdk-xmple-app/build.gradle
+++ b/sdk-xmple-app/build.gradle
@@ -13,8 +13,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //implementation 'com.github.swaarm:android-sdk:0.0.46'
+    //implementation 'com.github.swaarm:android-sdk:v0.2.0-RC'
 
     implementation 'com.google.android.gms:play-services-appset:16.0.2'
-    implementation project(':sdk')
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    //implementation project(':sdk')
 }
