--- a/sdk-xmple-app/build.gradle
+++ b/sdk-xmple-app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId 'com.swaarm.sdkxmple'
-        targetSdkVersion 32
+        targetSdkVersion 33
         minSdkVersion 19
         versionCode 2
         versionName "1.0"
     }
+    namespace 'com.swaarm.sdkxmple'
 }
 
 dependencies {
