--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,12 +2,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.kezong.fat-aar'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
-        targetSdkVersion 32
+        targetSdkVersion 33
         minSdkVersion 14
-        versionCode 1
-        versionName rootProject.ext.sdkVersion
     }
 
     publishing {
@@ -15,10 +13,11 @@ android {
             withSourcesJar()
         }
     }
-
-    lintOptions {
+    lint {
         abortOnError false
     }
+    namespace 'com.swaarm.sdk'
+
 }
 
 task swaarmSDKJarRelease(type: Jar) {
