--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.gms:play-services-appset:16.0.2'
+
+    implementation 'com.android.installreferrer:installreferrer:2.2'
 }
