--- a/sdk-xmple-app/build.gradle
+++ b/sdk-xmple-app/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.application'
 
+buildscript {
+    ext.kotlin_version = '1.6.0'
+}
 android {
     compileSdkVersion 33
     defaultConfig {
         applicationId 'com.swaarm.sdkxmple'
         targetSdkVersion 33
-        minSdkVersion 19
-        versionCode 2
+        minSdkVersion 24
+        versionCode 8
         versionName "1.0"
     }
     namespace 'com.swaarm.sdkxmple'
@@ -14,9 +17,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //implementation 'com.github.swaarm:android-sdk:v0.2.0-RC2'
+    implementation 'com.github.swaarm:android-sdk:v0.2.0-install-referrer-BETA5'
+    //implementation project(':sdk') //for development
 
     implementation 'com.google.android.gms:play-services-appset:16.0.2'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-    implementation project(':sdk')
+    implementation "com.android.billingclient:billing-ktx:6.1.0"
+    implementation 'com.android.installreferrer:installreferrer:2.2'
+
 }
