--- a/sdk-xmple-app/src/main/AndroidManifest.xml
+++ b/sdk-xmple-app/src/main/AndroidManifest.xml
@@ -1,32 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true">
-
-        <activity android:name="com.swaarm.sdkxmple.StartActivity"
+        <activity
+            android:name=".BillingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.swaarm.sdkxmple.EventActivity"
+        <activity
+            android:name=".EventActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".SecondaryActivity"
             android:exported="true">
-        </activity>
-
-        <activity android:name="com.swaarm.sdkxmple.SecondaryActivity" android:exported="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swaarm.sdkxmple.EventActivity" />
         </activity>
     </application>
+
 </manifest>
