--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.kezong.fat-aar'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
     defaultConfig {
-        targetSdkVersion 33
+        targetSdkVersion 34
         minSdkVersion 14
     }
 
@@ -20,25 +19,9 @@ android {
 
 }
 
-task swaarmSDKJarRelease(type: Jar) {
-    from('build/intermediates/javac/release/classes/')
-    archiveFileName = "swaarm-sdk-release.jar"
-}
-
-task swaarmSDKAarRelease() {
-    dependsOn 'assembleRelease'
-
-    if (project.hasProperty('fatAar')) {
-        dependencies {
-            embed 'com.google.android.gms:play-services-appset:16.0.2'
-        }
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.google.android.gms:play-services-appset:16.0.2'
-
-    implementation 'com.android.installreferrer:installreferrer:2.2'
+    api 'com.google.android.gms:play-services-appset:16.0.2'
+    api 'com.android.installreferrer:installreferrer:2.2'
 }
