--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.kezong:fat-aar:1.3.8'
     }
 }
 
@@ -25,7 +24,7 @@ allprojects {
         mavenCentral()
     }
     gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
+        tasks.withType(JavaCompile).configureEach {
             options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
         }
     }
@@ -42,11 +41,7 @@ project('sdk') {
         publications {
             sdk(MavenPublication) {
                 groupId = "com.github.swaarm"
-                if (project.hasProperty('fatAar')) {
-                    artifactId = "android-sdk-fat"
-                } else {
-                    artifactId = "android-sdk"
-                }
+                artifactId = "android-sdk"
 
                 version = rootProject.ext.sdkVersion
                 artifact("$buildDir/outputs/aar/sdk-release.aar")
