--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         targetSdkVersion 34
         minSdkVersion 14
