--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -10,6 +10,7 @@ android {
     publishing {
         singleVariant('release') {
             withSourcesJar()
+            withJavadocJar()
         }
     }
     lint {
