--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -38,7 +38,6 @@ task swaarmSDKAarRelease() {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.google.android.gms:play-services-appset:16.0.2'
-
-    implementation 'com.android.installreferrer:installreferrer:2.2'
+    api 'com.google.android.gms:play-services-appset:16.0.2'
+    api 'com.android.installreferrer:installreferrer:2.2'
 }
