--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,22 @@ ext {
 }
 
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = '1.6.21'
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://jitpack.io"
+            content {
+                includeGroup("com.github.aasitnikov")
+            }
+        }
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:8.8.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.kezong:fat-aar:1.3.8'
+        classpath 'com.github.aasitnikov:fat-aar-android:1.4.1'
     }
 }
 
